[front/Feature] Adjustments Fonts in sass

--- a/corebiz-store/styles/scss/global/_variables.scss
+++ b/corebiz-store/styles/scss/global/_variables.scss
@@ -1,10 +1,10 @@
 @import './breakpoints';
-@import './fonts';
+// @import './fonts';
 
 //Fonts
-$font-main: 'corebiz', sans-serif;
-$font-bold: 'corebizBold', sans-serif;
-$font-special: 'Nunito';
+// $font-main: 'Circular Std', sans-serif;
+// $font-bold: 'corebizBold', sans-serif;
+// $font-special: 'Nunito';
 
 //Colors
 
