--- a/corebiz-store/styles/scss/vtex.store-components.scss
+++ b/corebiz-store/styles/scss/vtex.store-components.scss
@@ -1,2 +1,54 @@
 @import './global/variables';
 
+:global(.vtex-flex-layout-0-x-flexRow--container-main) {
+	padding: 0;
+	margin: 100px auto 50px;
+	max-width: 1080px;
+}
+.autoCompleteOuterContainer {
+	:global(.vtex-input-prefix__group) {
+		border: none;
+		border-radius: 0;
+		border-bottom: 2px solid#ffffff;
+		background-color: transparent;
+		:global(.vtex-styleguide-9-x-input) {
+			border-radius: 0;
+			background-color: transparent;
+		}
+		:global(.vtex-input__suffix) {
+			border-radius: 0;
+			background-color: transparent;
+		}
+	}
+	
+	.searchIcon {
+		color: white;
+	}
+	:global(.vtex-input__suffix) {
+		padding-right: 0;
+	}
+}
+
+//Product Summary
+
+.carouselGaleryThumbs {
+	display: none;
+}
+.carouselGaleryCursor {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+
+.productImagesGallerySlide {
+	max-height: 300px;
+	margin-bottom: 50px;
+}
+.swiperCaretPrev,
+.swiperCaretNext {
+	top: 330px;
+}
+
+.caretIcon {
+	width: 15px;
+}
