[front/Feature] Style.json and CoreBiz assets

--- a/corebiz-store/styles/scss/vtex.product-summary.scss
+++ b/corebiz-store/styles/scss/vtex.product-summary.scss
@@ -35,7 +35,7 @@
         margin: 0 auto;
         border: 0;
         &:hover {
-            background-color:rgb(62, 178, 0);
+            background-color: #f1c233;
         }
     }
     :global(.vtex-add-to-cart-button-0-x-buttonDataContainer) {
