--- a/corebiz-store/styles/scss/vtex.slider-layout.scss
+++ b/corebiz-store/styles/scss/vtex.slider-layout.scss
@@ -1,6 +1,6 @@
 .slideChildrenContainer {
-    border-radius: 15px;
-    overflow: hidden;
+    // border-radius: 15px;
+    // overflow: hidden;
 }
 
 .paginationDotsContainer {
