--- a/corebiz-store/styles/scss/vtex.tab-layout.scss
+++ b/corebiz-store/styles/scss/vtex.tab-layout.scss
@@ -31,7 +31,7 @@
 		background-color: transparent;
 		border: 0;
 		border-radius: 0;
-		border-bottom:2px solid#59ff00;
+		border-bottom:2px solid #f1c233;
 	}
 }
 
