[front/Feature] Add App Cadastro and implementation PopUp Lead

--- a/corebiz-store/styles/scss/global/_variables.scss
+++ b/corebiz-store/styles/scss/global/_variables.scss
@@ -13,4 +13,5 @@ $color-black: #000;
 $color-gray: #7A7A7A;
 $color-newsletter: #F2F2F2; 
 $color-lightgray: #BDBDBD;
-$color-vermelho: #F8475F;
+$color-red: #F8475F;
+$color-yellow: #f1c233;
