--- a/corebiz-store/styles/scss/hiringcoders202112.app-cadastro.scss
+++ b/corebiz-store/styles/scss/hiringcoders202112.app-cadastro.scss
@@ -1,5 +1,46 @@
+@import './global/variables';
+
+.modalOverlay {
+	display: none;
+	position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+
+	background:black;
+	background:rgba(000,000,000,0.8);
+  
+	filter:blur(4px);
+	-o-filter:blur(4px);
+	-ms-filter:blur(4px);
+	-moz-filter:blur(4px);
+	-webkit-filter:blur(4px);
+	z-index: 9999;
+}
 .cadastroLead {
-	margin-bottom: 80px;
+	display: none;
+	background-color: white;
+	height: 420px;
+	left: 50%;
+	margin-left: -400px;
+	margin-top: -210px;
+	padding: 20px 40px;
+	position: fixed;
+	top: 50%;
+	width: 800px;
+	z-index: 999999;
+	@include breakpoint('mobile') {
+		width: calc(100% - 10vw);
+		margin-left: initial;
+		margin-top: initial;
+		top: 10vw;
+		bottom: 10vw;
+		height: calc(100% - 10vh);
+		left: 5vw;
+		right: 5vw;
+	}
+
 	.formGroup {
 		width: 100%;
 		height: 60px;
@@ -15,7 +56,7 @@
 	}
 	.inputGroup {
 		width: 80%;
-		height: 30px;
+		height: 40px;
 		border-radius: 5px;
 		border: 0;
 		background-color: #424242;
@@ -25,11 +66,11 @@
 	}
 	.buttonGroup {
 		float: right;
-		background-color:#59ff00;
+		background-color: $color-yellow;
 		color: black;
 		width: 80%;
 		border: none;
-		height: 30px;
+		height: 40px;
 		border-radius: 5px;
 		cursor: pointer;
 	}
