Update scss carrossel

--- a/corebiz-store/styles/scss/vtex.slider-layout.scss
+++ b/corebiz-store/styles/scss/vtex.slider-layout.scss
@@ -10,8 +10,8 @@
 
 .sliderRightArrow {
     position: absolute;
-    bottom: -52px;
     color: white;
+    margin:auto;
 }
 .caretIcon {
     width: 15px;
@@ -20,8 +20,8 @@
 
 .sliderLeftArrow {
     position: absolute;
-    bottom: -52px;
     color: white;
+    margin:auto;
 }
 .caretIcon {
     width: 15px;
