[feature/top] fixed submenu/exclude menu header/include login

--- a/corebiz-store/styles/scss/vtex.flex-layout.scss
+++ b/corebiz-store/styles/scss/vtex.flex-layout.scss
@@ -33,4 +33,8 @@
 // container menu
 .flexRow--container-menu {
 	background: black;
+	position: fixed;
+	top: 64px;
+	z-index: 999;
+	width: 100%;
 }
