[feature/hero] include banner hero initial

--- a/corebiz-store/styles/scss/vtex.store-components.scss
+++ b/corebiz-store/styles/scss/vtex.store-components.scss
@@ -53,6 +53,11 @@
   display: none;
 }
 
+// hero
+.imageElement--heroImage {
+	width: 100vw;
+}
+
 // page product details
 .productBrand--product-name {
 	color: #f1c233;
