--- a/corebiz-store/styles/scss/vtex.flex-layout.scss
+++ b/corebiz-store/styles/scss/vtex.flex-layout.scss
@@ -38,3 +38,10 @@
 	z-index: 999;
 	width: 100%;
 }
+
+// hero
+.flexRowContent--heroContainerImage {
+	background-image: linear-gradient(180deg,rgba(0, 0, 0, 0.5),transparent);
+	// width: 100vw;
+	// height: 100vh;
+}
