--- a/corebiz-store/styles/scss/hiringcoders202112.app-cadastro.scss
+++ b/corebiz-store/styles/scss/hiringcoders202112.app-cadastro.scss
@@ -1,6 +1,7 @@
 @import './global/variables';
 
 .modalOverlay {
+	display: none;
 	position: fixed;
     left: 0;
     top: 0;
@@ -18,12 +19,14 @@
 	z-index: 9999;
 }
 .cadastroLead {
+	display: none;
 	background-color: white;
 	height: 520px;
 	left: 50%;
 	margin-left: -400px;
 	margin-top: -260px;
-	padding: 20px 40px;
+	display: flex;
+	flex-direction: row;
 	position: fixed;
 	top: 50%;
 	width: 800px;
@@ -35,25 +38,56 @@
 		top: 10vw;
 		bottom: 10vw;
 		height: calc(100% - 10vh);
+		flex-direction: column;
 		left: 5vw;
 		right: 5vw;
+		padding: 0;
+		margin-bottom: 100px;
+	}
+
+	.modalTitle {
+		text-align: center;
+	}
+	.modalSubTitle {
+		text-align: center;
+		font-size: 12px;
+	}
+	.modalImage {
+		width: 50%;
+		background: url('http://hiringcoders202112.vteximg.com.br/arquivos/about-intro-image.jpg') 26% top no-repeat;
+		background-size: cover;
+		@include breakpoint('mobile') {
+			width: 100%;
+			height: 150px;
+		}
+	}
+	.modalForm {
+		width: 50%;
+		padding: 10px 20px;
+		@include breakpoint('mobile') {
+			width: 100%;
+		}
 	}
 
 	.formGroup {
 		width: 100%;
-		height: 60px;
-		display: flex;
+		display: block;
+		height: 80px;	
 	}
 	.labelGroup {
 		display:block;
-		width: 20%;
+		width: 100%;
 		margin-bottom: 5px;
-		text-align: right;
 		padding: 10px 8px 0 0;
 		box-sizing: border-box;
+		@include breakpoint('mobile') {
+			text-align: left;
+			width: 100%;
+			padding-top: 10px;
+		}
 	}
 	.inputGroup {
-		width: 80%;
+		width: 100%;
 		height: 40px;
 		border-radius: 5px;
 		border: 0;
@@ -61,59 +95,45 @@
 		padding: 4px 16px;
 		color: white;
 		box-sizing: border-box;
+		@include breakpoint('mobile') {
+			width: 100%;
+			box-sizing: border-box;
+		}
 	}
 	.buttonGroup {
 		float: right;
 		background-color: $color-yellow;
 		color: black;
-		width: 80%;
+		width: 100%;
 		border: none;
 		height: 40px;
 		border-radius: 5px;
 		cursor: pointer;
+		margin-top: 20px;
 	}
 	.error {
-		color: #fff;
-		font-weight: 500;
 		background-color: #f44336;
 		border-radius: 4px;
+		border: 0;
+		color: #fff;
+		display: block;
+		font-weight: 500;
 		margin: 0 auto 15px;
 		padding: 12px 8px;
-		border: 0;
 		text-align: center;
+		width: 100%;
 	}
 	.success {
-		color: #fff;
-		font-weight: 500;
 		background-color: #4caf50;
 		border-radius: 4px;
+		border: 0;
+		color: #fff;
+		display: block;
+		font-weight: 500;
 		margin: 0 auto 15px;
 		padding: 12px 8px;
-		border: 0;
 		text-align: center;
+		width: 100%;
 	}
 }
 
-@media (max-width: 768px) {
-	.cadastroLead {
-		margin-bottom: 100px;
-		padding: 0 10%;
-		.formGroup {
-			display: block;
-			height: 80px;	
-		}
-		.labelGroup {
-			text-align: left;
-			width: 100%;
-			padding-bottom: 10px;
-		}
-		.inputGroup {
-			width: 100%;
-			box-sizing: border-box;
-		}
-		.buttonGroup {
-			width: 100%;
-			margin-top: 20px;
-		}
-	}
-}
