[feature/hero] create hero fixed and edit css tab-layout listContainer

--- a/corebiz-store/styles/scss/vtex.stack-layout.scss
+++ b/corebiz-store/styles/scss/vtex.stack-layout.scss
@@ -1,5 +1,6 @@
 .stackContainer--hero {
   height: 100vh;
   width: 100vw;
-  background: url("assets/banner/banner-hero-map-corebiz.png") no-repeat fixed;
+  background: url("assets/banner/banner-hero-map-corebiz.png") no-repeat fixed center;
+  background-size: cover;
 }
