--- a/corebiz-store/styles/scss/vtex.stack-layout.scss
+++ b/corebiz-store/styles/scss/vtex.stack-layout.scss
@@ -1,6 +1,6 @@
 .stackContainer--hero {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: url("assets/banner/banner-hero-map-corebiz.png") no-repeat fixed center;
   background-size: cover;
 }
