--- a/corebiz-store/styles/scss/vtex.flex-layout.scss
+++ b/corebiz-store/styles/scss/vtex.flex-layout.scss
@@ -1,52 +1,71 @@
-.container-main{
-	.container {
-		padding: 0;
-		margin: 100px auto;
-		max-width: 1180px;
-	}
+.container-main {
+  .container {
+	padding: 0;
+	margin: 100px auto;
+	max-width: 1180px;
+  }
 }
-.flexRowContent--main-header-mobile{
-	background-color: transparent !important;
+.flexRowContent--main-header-mobile {
+  background-color: transparent !important;
 }
 
-.flexRow--container-cadastro{
-	padding: 0;
-	margin: 50px auto;
-	max-width: 1080px;
-	.flexRowContent--container-cadastro {
-		display: flex;
-		flex-direction: column;
-	}
-	.flexRow--banner-cadastro {
-		width: 100%;
-		border-radius: 15px;
-		overflow: hidden;
-	}
-	.flexRow--form-cadastro {
-		width: 100%;
-		max-width: 450px;
-		margin: 0 auto;
-		color: white;
-	}
+.flexRow--container-cadastro {
+  padding: 0;
+  margin: 50px auto;
+  max-width: 1080px;
+  .flexRowContent--container-cadastro {
+	display: flex;
+	flex-direction: column;
+  }
+  .flexRow--banner-cadastro {
+	width: 100%;
+	border-radius: 15px;
+	overflow: hidden;
+  }
+  .flexRow--form-cadastro {
+	width: 100%;
+	max-width: 450px;
+	margin: 0 auto;
+	color: white;
+  }
 }
 
 // container menu
 .flexRow--container-menu {
-	background: black;
-	position: fixed;
-	top: 64px;
-	z-index: 999;
-	width: 100%;
+  background: black;
+  position: fixed;
+  top: 64px;
+  z-index: 999;
+  width: 100%;
 }
 
 // hero
 .flexRowContent--heroContainerImage {
-	background-image: linear-gradient(180deg,rgba(0, 0, 0, 0.5),transparent);
-	// width: 100vw;
-	// height: 100vh;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), transparent);
+  // width: 100vw;
+  // height: 100vh;
 }
 
 //Brands
 .flexRow--section-brands {
-	background-color: black;
+  background-color: black;
+}
+
+//Product
+
+.flexRow--product-main {
+  :global(.vtex-button) {
+	border: 0;
+	&:hover,
+	&:focus {
+	  background-color: #f1c233;
+	}
+  }
+  :global(.vtex-button__spinner-container) {
+	background-color: #f1c233;
+	border-radius: 5px;
+  }
+  :global(.vtex-styleguide-9-x-rotate) {
+	color: black;
+  }
 }
