--- a/corebiz-store/styles/scss/vtex.flex-layout.scss
+++ b/corebiz-store/styles/scss/vtex.flex-layout.scss
@@ -5,6 +5,8 @@
 		max-width: 1180px;
 	}
 }
+
+
 .flexRowContent--main-header-mobile{
 	background-color: transparent !important;
 }
@@ -38,3 +40,9 @@
 	z-index: 999;
 	width: 100%;
 }
+
+//carrossel de logos
+.flexRow--container-carrossel{
+	background-color: black;
+}
+
