--- a/corebiz-store/styles/css/vtex.menu.css
+++ b/corebiz-store/styles/css/vtex.menu.css
@@ -1,1 +1,1 @@
-.menuContainerNav--menu-item{margin-top:.5rem}.styledLink--menu-item{text-transform:lowercase;font-size:.875rem}.styledLink--menu-item:hover{border-bottom:2px solid #f1c233}.styledLinkContent{text-transform:lowercase}
+.menuContainerNav--menu-item{margin-top:.5rem}.styledLink--menu-item{text-transform:lowercase;font-size:.875rem}.styledLink--menu-item:hover{border-bottom:2px solid #f1c233}.styledLinkContent{text-transform:lowercase}@media only screen and (min-width: 100px)and (max-width: 768px){.menuContainer--menu-item-category{flex-direction:column}}
