--- a/corebiz-store/styles/css/vtex.rich-text.css
+++ b/corebiz-store/styles/css/vtex.rich-text.css
@@ -1,1 +1,1 @@
-.container--heroText{width:100vw;height:100vh}.heading--heroText{width:35vw;font-size:7rem;line-height:7rem;font-weight:700;margin:10rem}
+.heading--heroText{width:35vw;font-size:7rem;line-height:7rem;font-weight:700;margin:15rem 0 0 10rem}@media only screen and (min-width: 100px)and (max-width: 768px){.heading--heroText{width:100%;font-size:2.5rem;line-height:4rem;font-weight:700;margin-inline:auto}}
