--- a/corebiz-store/styles/css/vtex.stack-layout.css
+++ b/corebiz-store/styles/css/vtex.stack-layout.css
@@ -1,1 +1,1 @@
-.stackContainer--hero{height:100vh;width:100%;background:url("assets/banner/banner-hero-map-corebiz.png") no-repeat fixed center;background-size:cover}
+.stackContainer--hero{height:100vh;background:url("assets/banner/banner-hero-map-corebiz.png") no-repeat fixed center;background-size:cover}
