--- a/corebiz-store/styles/scss/vtex.menu.scss
+++ b/corebiz-store/styles/scss/vtex.menu.scss
@@ -1,3 +1,5 @@
+@import './global/variables';
+
 // menu header
 .menuContainerNav--menu-item {
   margin-top: .5rem;
@@ -14,4 +16,9 @@
 // menu categories
 .styledLinkContent {
   text-transform: lowercase;
+}
+.menuContainer--menu-item-category {
+  @include breakpoint('mobile') {
+    flex-direction: column;
+  }
 }
