--- a/corebiz-store/styles/scss/vtex.rich-text.scss
+++ b/corebiz-store/styles/scss/vtex.rich-text.scss
@@ -1,12 +1,17 @@
-.container--heroText {
-  width: 100vw;
-  height: 100vh;
-}
+@import './global/variables';
+
 .heading--heroText {
   width: 35vw;
   font-size: 7rem;
   line-height: 7rem;
   font-weight: 700;
-  margin: 10rem;
+  margin: 15rem 0 0 10rem;
   // position: fixed;
+  @include breakpoint('mobile') {
+    width: 100%;
+    font-size: 2.5rem;
+    line-height: 4rem;
+    font-weight: 700;
+    margin-inline: auto;
+  }
 }
