--- a/corebiz-store/styles/scss/vtex.flex-layout.scss
+++ b/corebiz-store/styles/scss/vtex.flex-layout.scss
@@ -48,12 +48,12 @@
 	// height: 100vh;
 }
 
-//Brands
-.flexRow--section-brands {
-	background-color: black;
-}
 //carrossel de logos
 .flexRow--container-carrossel{
 	background-color: black;
 }
 
+// bg color section values
+.flexRow--section-black {
+	background-color: #101010;
+}
