--- a/corebiz-store/styles/scss/vtex.store-footer.scss
+++ b/corebiz-store/styles/scss/vtex.store-footer.scss
@@ -1,46 +1,68 @@
-// ?__inspect
+@import './global/variables';
 
 .footerLayout {
-	background-color:#1f1e1e;
-	min-height: 2000px;
-	//814px;
-	// position: fixed;
-	// bottom: 0;
-	// left: 0;
-	// right: 0;
-	z-index: 999;
-
-	// derikson-codigo
-	:global(.vtex-flex-layout-0-x-flexRow--footerRowBg) {
-		display: flex;
-	    background-image: url("assets/footer/background.png");
-		margin-left: 230px;
-		margin-bottom: -100px;
-		height: 814px;
-		width: 100vw;
+	background: url('assets/footer/background.png') right top no-repeat;
+	display: block;
+	background-size: cover;
+	// min-height: 800px;
+	padding-top: 100px;
+	position: relative;
+	
+	:global(.vtex-flex-layout-0-x-flexRow--footerSection) {
+		&::after {
+			background-color: #191919;
+			bottom: 0;
+			content: '';
+			display: block;
+			left: 0;
+			position: absolute;
+			top: 100px;
+			bottom: 135px;
+			width: 50%;
+		}
+		
 	}
-
-	:global(.vtex-flex-layout-0-x-flexRowContent--footerRowBg) {
+	:global(.vtex-flex-layout-0-x-flexCol--footerContainer) {
 		background-color: #191919;
-		margin-top: 100px;
-		margin-left: -700px;
-		width: 90vw;
-		height: 614px;
+		margin: 0 auto 0;
+		// min-height: 700px;
+		padding: 0;
+		display: block;
+		z-index: 99;
+
+		:global(.vtex-flex-layout-0-x-flexRowContent) {
+			padding: 20px;
+		}
+
+		:global(.vtex-flex-layout-0-x-flexRow--newsMedia){
+			// background-color:red;
+			display: block;
+			width: 100%;
+		}
+		:global(.vtex-flex-layout-0-x-flexRow--siteMap){
+			// background-color: blue;
+			display: block;
+			width: 100%;
+		}
+		
+		:global(.vtex-flex-layout-0-x-flexRow--paymentCertificates){
+			// background-color: green;
+			display: block;
+			width: 100%;
+		}
+
+		:global(.vtex-flex-layout-0-x-flexColChild--footerContainer) {
+			height: auto!important;
+		}
 	}
 
-	:global(.vtex-flex-layout-0-x-flexRow--footerRow4) {
-		background-color: #000000;
-		height: 100px;
+	:global(.vtex-flex-layout-0-x-flexRow--footerLogosSection) {
+		background-color: black;
+		border-top: 1px solid #303030;
+		min-height: 135px;
+		z-index: 99;
+		display: block;
 	}
 
-	:global(.vtex-rich-text-0-x-container--richTextFooterRow4) {
-		margin-top: 30px;
-		margin-left: -160px;
-	}
-
-	:global(.vtex-flex-layout-0-x-flexRowContent--footerRow4) {
-		position: relative;
-		display: flex;
-		align-items: center;
-	}
 }
+
