--- a/corebiz-store/styles/scss/vtex.store-components.scss
+++ b/corebiz-store/styles/scss/vtex.store-components.scss
@@ -74,10 +74,11 @@
 	}
 .content--product-description {
 	margin: 2rem auto 1rem;
-	padding: 1rem;
-	background-color: #000000;
+	//padding: 1rem;
+	//background-color: #000000;
 	border-radius: 3px;
 	line-height: 1.5rem;
+	color: white;
 }
 
 .buyButtonText {
