ajuste da seção quem somos

--- a/corebiz-store/styles/scss/vtex.flex-layout.scss
+++ b/corebiz-store/styles/scss/vtex.flex-layout.scss
@@ -72,3 +72,9 @@
 .flexRow--section-black {
 	background-color: #101010;
 }
+.flexRow--section-values {
+  padding-bottom: 60px;
+}
+.flexCol--titles {
+  max-width: 700px;
+}
