--- a/corebiz-store/styles/scss/vtex.rich-text.scss
+++ b/corebiz-store/styles/scss/vtex.rich-text.scss
@@ -27,3 +27,11 @@
 .container--title-logo-message{
     background-color: black;
 }
+
+//Paragrafo sessão quem Somos
+.paragraph--paragrafo-quem-somos{
+  text-align: center;
+  font-family: 'Poppins-Regular', sans-serif;
+  font-size: 14px;
+
+}
