--- a/corebiz-store/styles/scss/vtex.rich-text.scss
+++ b/corebiz-store/styles/scss/vtex.rich-text.scss
@@ -21,7 +21,13 @@
     font-size: large;
     font-family: Circular Std Medium,sans-serif;
     font-size: 3.0rem;
+    font-weight: 600;
     margin-top: 6.5rem;
+    @include breakpoint('mobile') {
+      padding: 0 20px;
+      text-align: center;
+      font-size: 2.0rem;
+    }
 }
 
 .container--title-logo-message{
