--- a/corebiz-store/styles/scss/vtex.store-footer.scss
+++ b/corebiz-store/styles/scss/vtex.store-footer.scss
@@ -1,6 +1,7 @@
 @import './global/variables';
 
 .footerLayout {
+	margin-top: 5rem;
 	background: url('assets/footer/background.png') right top no-repeat;
 	display: block;
 	background-size: cover;
@@ -46,6 +47,7 @@
 		:global(.vtex-flex-layout-0-x-flexRow--newsMedia){
 			display: block;
 			width: 100%;
+			margin-top: 30px;
 			margin-bottom: 30px;
 			:global(.vtex-flex-layout-0-x-flexRow--mediaIcons) {
 				width: 226px;
