qa/Adjustments Header Mobile

--- a/corebiz-store/styles/css/vtex.store-drawer.css
+++ b/corebiz-store/styles/css/vtex.store-drawer.css
@@ -1,1 +1,1 @@
-@media only screen and (min-width: 100px)and (max-width: 768px){.menuIcon--menu-header{fill:#fff !important}}
+@media only screen and (min-width: 100px)and (max-width: 768px){.menuIcon--menu-header{margin-top:10px;color:#fff}}.closeIcon{color:#fff}
