--- a/corebiz-store/styles/css/vtex.search-result.css
+++ b/corebiz-store/styles/css/vtex.search-result.css
@@ -1,1 +1,1 @@
-.galleryTitle--layout{color:#fff}.totalProducts--layout{color:#fff}.filterMessage{color:#fff}.filterTitle{color:#fff}
+.galleryTitle--layout{color:#fff}.totalProducts--layout{color:#fff}.filterMessage{color:#fff}.filterTitle{color:#fff}.searchResultContainer{padding-bottom:3rem}
