qa/Adjustments rename folders

--- a/corebiz-store/styles/scss/vtex.login.scss
+++ b/corebiz-store/styles/scss/vtex.login.scss
@@ -47,9 +47,12 @@
     :global(.vtex-login-2-x-content--accountOptions){
         background-color: #101010;
     }
+    
 
 }
-
+.arrowUp {
+    background-color: white;
+}
 
 //layout send email cod acess
 .sendButton{
