--- a/corebiz-store/styles/scss/vtex.login.scss
+++ b/corebiz-store/styles/scss/vtex.login.scss
@@ -63,7 +63,7 @@
         }
         box-sizing: border-box;
         //border-width: .125rem;
-        border-radius: .25rem;
+        border-radius: 2px;
         border-color: #f1c233;
         //border-style: solid;
     }    
@@ -82,6 +82,6 @@
     background-color: black;
     box-sizing: border-box;
     border-width: .125rem;
-    border-radius: .25rem;
+    border-radius: 2px;
 }
 
