--- a/corebiz-store/styles/scss/vtex.flex-layout.scss
+++ b/corebiz-store/styles/scss/vtex.flex-layout.scss
@@ -19,7 +19,7 @@
   }
   .flexRow--banner-cadastro {
 	width: 100%;
-	border-radius: 15px;
+	border-radius: 2px;
 	overflow: hidden;
   }
   .flexRow--form-cadastro {
@@ -56,7 +56,7 @@
   }
   :global(.vtex-button__spinner-container) {
 	background-color: #f1c233;
-	border-radius: 5px;
+	border-radius: 2px;
   }
   :global(.vtex-styleguide-9-x-rotate) {
 	color: black;
@@ -81,4 +81,8 @@
 // pagina de quem somos
 .flexRow--main-container {
   margin-top: 100px;
+}
+
+.flexRow--aboutUs-container {
+  padding-bottom: 4rem;
 }
