--- a/corebiz-store/styles/scss/vtex.order-placed.scss
+++ b/corebiz-store/styles/scss/vtex.order-placed.scss
@@ -23,3 +23,20 @@
 :global(.vtex-order-placed-2-x-section--bank-invoice) {
     color: white;
 }
+
+
+:global(.vtex-order-placed-2-x-orderNumber) {
+    color: white;
+}
+
+:global(.vtex-button) {
+    background-color: black;
+}
+
+:global(.vtex-order-placed-2-x-packageDeliveryTitle) {
+    color: white;
+}
+
+:global(.vtex-order-placed-2-x-productPrice) {
+    color: white;
+}
